--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "smtech/reflexxive-canvas-lti",
+    "name": "smtech/reflexive-canvas-lti",
     "description": "LTI tool provider class that includes the \"reflexive\" reach back into Canvas via the API",
     "config": {
 	    "secure-http": false
@@ -20,7 +20,12 @@
 						"name": "Stephen Vickers"
 					}   
 				],
-				"homepage": "http://spvsoftwareproducts.com/php/lti_tool_provider/"
+				"homepage": "http://spvsoftwareproducts.com/php/lti_tool_provider/",
+				"autoload": {
+					"psr-4": {
+						"" : ""
+					}
+				}
 			}
 		}
 	],
@@ -29,8 +34,14 @@
         "smtech/canvaspest": "~1.0",
         "battis/appmetadata": "~1.0",
         "battis/simplecache": "~1.0",
+        "battis/configxml": "~1.0",
+        "battis/batch-action": "dev-master",
 		"pear/log": "~1.0",
         "zendframework/zend-permissions-rbac": "~2.5"
+    },
+    "require-dev": {
+	    "phpunit/phpunit": "5.*",
+	    "phpunit/dbunit": ">=1.2"
     },
     "license": "LGPL-3.0",
     "authors": [
