--- a/composer.json
+++ b/composer.json
@@ -2,46 +2,45 @@
     "name": "smtech/reflexive-canvas-lti",
     "description": "LTI tool provider class that includes the \"reflexive\" reach back into Canvas via the API",
     "config": {
-	    "secure-http": false
+        "secure-http": false
     },
-	"repositories": [
-		{
-			"type": "package",
-			"package": {
-				"name": "spvsoftwareproducts/LTI_Tool_Provider",
-				"version": "2.5.01",
-				"dist": {
-					"url": "http://projects.oscelot.org/gf/download/frsrelease/956/6025/LTI_Tool_Provider-2.5.01.zip",
-					"type": "zip"
-				},
-				"license": "LGPL-3.0",
-				"authors": [
-					{
-						"name": "Stephen Vickers"
-					}   
-				],
-				"homepage": "http://spvsoftwareproducts.com/php/lti_tool_provider/",
-				"autoload": {
-					"psr-4": {
-						"" : ""
-					}
-				}
-			}
-		}
-	],
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "spvsoftwareproducts/LTI_Tool_Provider",
+                "version": "2.5.01",
+                "dist": {
+                    "url": "http://projects.oscelot.org/gf/download/frsrelease/956/6025/LTI_Tool_Provider-2.5.01.zip",
+                    "type": "zip"
+                },
+                "license": "LGPL-3.0",
+                "authors": [
+                    {
+                        "name": "Stephen Vickers"
+                    }
+                ],
+                "homepage": "http://spvsoftwareproducts.com/php/lti_tool_provider/",
+                "autoload": {
+                    "psr-4": {
+                        "" : ""
+                    }
+                }
+            }
+        }
+    ],
     "require": {
-		"spvsoftwareproducts/LTI_Tool_Provider": "~2.5",
+        "spvsoftwareproducts/LTI_Tool_Provider": "~2.5",
         "smtech/canvaspest": "~1.0",
         "battis/appmetadata": "~1.0",
         "battis/simplecache": "~1.0",
         "battis/configxml": "~1.0",
         "battis/batch-action": "dev-master",
-		"pear/log": "~1.0",
-        "zendframework/zend-permissions-rbac": "~2.5"
+        "pear/log": "~1.0"
     },
     "require-dev": {
-	    "phpunit/phpunit": "5.*",
-	    "phpunit/dbunit": ">=1.2"
+        "phpunit/phpunit": "~5.0",
+        "phpunit/dbunit": "~1.2"
     },
     "license": "LGPL-3.0",
     "authors": [
@@ -51,9 +50,9 @@
         }
     ],
     "autoload": {
-	    "psr-4": {
-		    "smtech\\ReflexiveCanvasLTI\\": "src/"
-	    }
+        "psr-4": {
+            "smtech\\ReflexiveCanvasLTI\\": "src/"
+        }
     },
     "minimum-stability": "dev"
 }
