--- a/examples/tool-provider/.htaccess
+++ b/examples/tool-provider/.htaccess
@@ -1,3 +1,4 @@
+# Block access to things that should stay private
 <Files ~ "(.xml|.sql|.inc.php|.md|.git*)">
     Order allow,deny
     Deny from all
