--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,16 @@
-# This file is for unifying the coding style for different editors and IDEs
-# editorconfig.org
-
-# PHP PSR-2 Coding Standards
-# http://www.php-fig.org/psr/psr-2/
-
 root = true
 
-[*.php]
+[*]
 charset = utf-8
 end_of_line = lf
+indent_size = 4
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = space
-indent_size = 4
+
+[*.js]
+indent_size = 2
+
+[*.md]
+indent_size = 2
+trim_trailing_whitespace = false
