--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         }
     ],
     "require": {
+        "php": ">=5.6",
         "spvsoftwareproducts/LTI_Tool_Provider": "~2.5",
         "smtech/canvaspest": "~1.0",
         "smtech/lti-configuration-xml": "~1.0",
