--- a/composer.json
+++ b/composer.json
@@ -50,5 +50,6 @@
         "battis/data-utilities": "~0.1.3",
         "myclabs/php-enum": "~1.0",
         "pear/log": "~1.0"
-    }
+    },
+    "abandoned": "https://github.com/OSCELOT/LTI-PHP"
 }
